# MaOS

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md
.run/: QEMU Debug ISO.run.xml  QEMU Debug.run.xml  QEMU GDB.run.xml  QEMU ISO.run.xml  QEMU.run.xml
include/: types.h  utils.h
iso/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  linker.ld
kernel/arch/x86/: boot.asm  common.c  gdt.asm  isr.asm  isr.c  keyboard.c  linker.ld  paging.asm  paging.c  paging.c.bak  port.c  tables.c  timer.c  tty.c
kernel/gfx/: colors.c  colors.cpp  gfx.c  gfx.cpp
kernel/include/kernel/: addressspace.h  common.h  gfx.h  gfx.hpp  hello.h  isr.h  keyboard.h  linkervars.h  memory.h  multiboot.h  pci.h  port.h  serial.h  tables.h  timer.h  tty.h  types.h  vm.h
kernel/io/: keyboard.c  pci.c  port.c  serial.c  tty.c
kernel/kernel/: boot.asm  common.c  hello.cpp  kernel.c  kernel.cpp  tables.asm  timer.c
kernel/memory/: kmalloc.c  pmm.c  vm.c
libc/: CMakeLists.txt
libc/bitset/: bitset.c
libc/cpp/: new.cpp
libc/include/: bitset.h  liballoc.h  stdio  stdio.h  stdlib  stdlib.h  string.h
libc/liballoc/: liballoc.c
libc/stdio/: printf.c  putchar.c  puts.c
libc/stdlib/: stdlib.c
libc/string/: memcpy.asm  string.c
libmath/: CMakeLists.txt  math.asm  math.c  math.cpp
libmath/include/: math.h  math.hpp
